# ur-arm-pkgs

./: Dockerfile  README.md
ur_arm/ur_arm/: CMakeLists.txt  package.xml
ur_arm/ur_description/: CMakeLists.txt  package.xml
ur_arm/ur_description/launch/: test_two_arms.launch  ur_gazebo.launch  ur_standalone_gazebo.launch
ur_arm/ur_description/urdf/: ur.urdf.xacro  ur_joint_control.xacro  ur_joint_control_vel.xacro  ur_robot.urdf.xacro  ur_robot_multi.urdf.xacro
ur_arm/ur_gazebo/: CMakeLists.txt  Doxyfile.in  package.xml
ur_arm/ur_gazebo/config/: JointTrajectoryParams.yaml  UrControl.yaml  UrControlLocalImpl.SetVelocity.yaml  UrControlLocalImpl.yaml
ur_arm/ur_gazebo/launch/: ur_control.launch
ur_arm/ur_gazebo/test/: SetJointStatePositionPublisher.cpp  SetJointStatePublisher.cpp  SimpleJointTrajectoryClient.cpp
ur_arm/ur_gazebo/urdf/: gzplugin_grasp_fix.urdf.xacro  gzplugin_joint_control.urdf.xacro  gzplugin_ros_control.urdf.xacro
ur_arm/ur_joints/: CMakeLists.txt  Doxyfile.in  package.xml
ur_arm/ur_joints/config/: JacoJoints.yaml  UrJoints.yaml
ur_arm/ur_joints/launch/: init_ur_joints.launch
ur_arm/ur_joints/src/: JacoJointManager.cpp
ur_arm/ur_moveit/config/: moveit_multidof_controllers.yaml  moveit_simple_controllers.yaml
ur_arm/ur_moveit/launch/: ur_moveit.launch  ur_moveit_simple_controller_manager.launch
ur_joystick_and_real_world/: main.py
ur_joystick_and_real_world/scripts/: gazebo_joints_client.py  gazebo_realworld_linker.py  inverse_kinematics_jaco.py  joint_states_publisher.py
ur_tutorial/ur_on_table/: CMakeLists.txt  package.xml
ur_tutorial/ur_on_table/launch/: collide_without_contact.world  dump  ur_on_table_gazebo.launch  ur_on_table_gazebo_controlled.launch  ur_on_table_two_arms_gazebo.launch
ur_tutorial/ur_on_table/stl_env_sim/: test_poly_0.stl  test_poly_1.stl  test_poly_2.stl  test_poly_3.stl  test_poly_4.stl  test_poly_6.stl  test_poly_7.stl  test_poly_8.stl
ur_tutorial/ur_on_table/urdf/: ur_on_table.urdf.xacro  ur_on_table_robot.urdf  ur_on_table_robot.urdf.xacro  (+3 more)
ur_tutorial/ur_tutorial/: CMakeLists.txt  package.xml
(+27 files in other folders)
